# CoffeeShop

./: .env  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: admin.py  config.py  file.py  jwt.py  main.py
app/auth/: __init__.py  auth.py  jwt.py  shemas.py
app/db/: database.py  models.py
app/products/: __init__.py  crud.py  router.py  schemas.py
app/storage/: __init__.py  router.py  storage.py
app/tasks/: __init__.py  product_sale.py
app/users/: __init__.py  crud.py  router.py  shemas.py
app/utils/: hash_password.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: admin.py  config.py  main.py
backend/app/api/v1/: __init__.py  pagination.py
backend/app/api/v1/auth/: __init__.py  jwt.py  router.py  schemas.py
backend/app/api/v1/coffees/: crud.py  router.py  schemas.py
backend/app/api/v1/storage/: __init__.py  storage.py
backend/app/api/v1/tasks/: product_sale.py
backend/app/api/v1/users/: crud.py  router.py  schemas.py  utils.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/endpoints/: __init__.py
backend/app/endpoints/auth/: __init__.py  auth.py  jwt.py
backend/app/endpoints/coffees/: __init__.py  crud.py  router.py  schemas.py
backend/app/endpoints/products/: __init__.py  crud.py  router.py  schemas.py
backend/app/endpoints/storage/: __init__.py  router.py  storage.py
backend/app/endpoints/tasks/: product_sale.py
backend/app/endpoints/users/: __init__.py  crud.py  router.py  schemas.py  utils.py
backend/app/utils/: __init__.py  paginator.py
backend/migrations/: env.py
backend/migrations/versions/: 126ddfdbc02a_init.py  b8c8f673e019_init.py  f7f202d8b805_init.py  fda1694f413f_init.py
frontend/: README.md  biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/shared/: index.ts
frontend/src/components/shared/CoffeeCard/: CoffeeCard.module.css  CoffeeCard.tsx
frontend/src/components/shared/CoffeeSlice/: CoffeeSlice.module.css  CoffeeSlice.tsx
frontend/src/components/shared/NotFound/: NotFound.module.css  NotFound.tsx
frontend/src/components/shared/SearchBar/: SearchBar.module.css  SearchBar.tsx
frontend/src/components/ui/: index.ts
frontend/src/components/ui/CoffeeSpin/: CoffeeSpin.module.css  CoffeeSpin.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/store/: coffeeStore.ts  index.ts  searchStore.ts
frontend/src/types/: coffee.ts  coffee.tsx
migrations/versions/: 7bc8e8676327_initial_migration.py  806bbed21620_initial_migration.py  db4b0984d4a0_initial_migration.py
