[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["nikit <nikitatokin2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^22.0.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
aiofiles = "^23.2.1"
pyjwt = "^2.8.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
