[project]
name = "productshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.19.0",
    "aiofiles>=24.1.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi>=0.115.8",
    "fastapi-profiler>=1.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "slowapi>=0.1.9",
    "sqladmin>=0.20.1",
    "sqlalchemy[asyncio]>=2.0.37",
    "unicorn[standard]>=2.1.1",
    "uvicorn>=0.34.0",
]
