[project]
name = "backend_coffee_shop"
version = "0.1.0"
description = "Backend for the coffee shop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.19.0",
    "aiofiles>=24.1.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqladmin>=0.20.1",
    "sqlmodel>=0.0.22"
]
